--- a/styles/quotes.css
+++ b/styles/quotes.css
@@ -1,4 +1,18 @@
   
 .quotes {
   border: 3px dotted goldenrod;
+  background-color: rgba(218, 165, 32, 0.5);
+}
+
+.quote__text {
+  font-style: italic;
+}
+
+.quote__author {
+  font-weight: bold;
+}
+
+.quote {
+  border: 3px solid white;
+  font-weight: bold;
 }
