--- a/styles/locations.css
+++ b/styles/locations.css
@@ -1,7 +1,13 @@
 .locations {
   border: 3px dotted orangered;
+  background-color: rgba(255, 69, 0, 0.5);
 }
 
 .location__image {
   height: 15rem;
+}
+
+.location {
+  border: 3px solid white;
+  font-weight: bold;
 }
